Changed basic height to be a min-height; *height only present to stop div from collapsing to zero w/o content

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .column {
     /* display:inline-block; */
     width: 100%;
-    height: 180px;
+    min-height: 180px;
     margin: 1px;
     background: lightgreen;
 }
